fix misaligned text

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
   font-size: 12px;
   text-indent: 0;
-  text-align: left;
+  text-align: center;
   vertical-align: middle;
   box-sizing: border-box;
   outline: 0;
